--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,46 @@
 }
 
 .app__card {
+    clip-path: polygon(15% 0, 100% 1%, 100% 100%, 0 100%, 0 34%);
+    box-shadow: .03em 0.3em 0.5em rgb(117, 54, 9);
     width: 100%;
     max-width: 500px;
-    background-color: rgb(240, 105, 30, 70%);
+    background-color: white;
     padding: 1.5em 2em;
-    border-radius: 0.8cm;
+    border-radius: 0.3cm;
     display: gird;
     gap: 1em;
-    box-shadow: .03em 0.3em 0.5em rgb(117, 54, 9);
+    
 }
+
+.corner:before {
+    content: "";
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 0px;
+    height: 0px;
+    border-bottom: 70px solid #eee;
+    border-left: 70px solid transparent;
+    -webkit-box-shadow: 7px 7px 7px rgba(0,0,0,0.3);
+    -moz-box-shadow: 7px 7px 7px rgba(0,0,0,0.3);
+    box-shadow: 7px 7px 7px rgba(0,0,0,0.3);
+  }
+  
+  .corner {
+    position: relative;
+    -webkit-box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
+    -moz-box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
+  }
+  
+  .corner:after {
+    content: "";
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 0px;
+    height: 0px;
+    border-top: 69px solid transparent;
+    border-right: 69px solid transparent;
+  }
